# VulkanToolbox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VulkanToolbox.sln
Dependencies/: PortableGitDeps.bat
Example1/: CMakeLists.txt
GlobalExternalLibraries/: CMakeLists.txt
Proceduralization/: CompileShaders.bat  DepthRender.frag  MakeRandomData.comp  Proceduralization.cpp  Proceduralization.vcxproj  Proceduralization.vcxproj.filters  StateUpdate.comp  shader.frag  shader.vert
Proceduralization/Builds/Debug/x64/Intermediates/: Proceduralization.exe.recipe  Proceduralization.ilk
Proceduralization/Builds/Debug/x64/Intermediates/Procedur.b73c8225.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Proceduralization.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Proceduralization/Builds/Release/x64/Intermediates/: Proceduralization.exe.recipe
Proceduralization/Builds/Release/x64/Intermediates/Procedur.b73c8225.tlog/: CL.19020.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Proceduralization/Builds/Release/x64/shaders/: depthrenderfrag.spv  frag.spv  vert.spv
Proceduralization/shaders/: depthrenderfrag.spv  stateupdate.spv  vert.spv
RandomPath/: CMakeLists.txt
RandomPath/Shaders/: CompileShaders.bat  DepthRenderVert.vert  RandomGen.comp
RandomPath/Shaders/compiledShaders/: randomgen.spv
RandomPath/Source/: Proceduralization.cpp
ShadowCaster/: CMakeLists.txt
ShadowCaster/Shaders/VertexAndFragment/: Vertex.vert
ShadowCaster/Shaders/compiledShaders/: DepthRenderVert.spv
Src/: CMakeLists.txt
Src/VulkanToolbox/Headers/: CommandManager.hpp  DescriptorManager.hpp  MemoryManager.hpp  PipelineManagers.hpp  VulkanIncludeInfo.hpp.in  VulkanToolbox.hpp
Src/VulkanToolbox/Source/: PipelineManagers.cpp  VulkanWindow.cpp
Testing/: Testing.cpp  Testing.vcxproj
Tests/RandomPath/RandomPathBinaries/shaders/: Fragment.spv
Tests/RandomPath/Shaders/: DepthRenderFrag.frag
Tests/RandomPath/Source/: Proceduralization.cpp
Tests/ShadowCaster/Shaders/: CompileShaders.bat
Tests/ShadowCaster/Shaders/ShadowShaders/: Shadow.comp
Tests/ShadowCaster/Shaders/compiledShaders/: StateUpdate.spv
Tests/SimpleTriangle/Shaders/VertexAndFragment/: Fragment.frag
Tests/SimpleTriangle/Shaders/compiledShaders/: Vertex.spv
Tests/SimpleTriangle/Source/: SimpleTriangle.cpp
VulkanToolbox/: AddBufferValues.comp  CMakeLists.txt  Common.props  CompileShaders.bat  StateUpdate.comp  VulkanToolbox.cpp  VulkanToolbox.vcxproj  VulkanToolbox.vcxproj.filters  shader.frag  shader.vert
VulkanToolbox/Builds/Debug/x64/: VulkanToolbox.exe.recipe  VulkanToolbox.vcxproj.FileListAbsolute.txt
VulkanToolbox/Builds/Debug/x64/Intermediates/VulkanToolbox.tlog/: CL.10380.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanToolbox/Builds/Debug/x64/VulkanToolbox.tlog/: CL.11988.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanToolbox/Builds/Debug/x64/shaders/: StateUpdate.spv  vert.spv
VulkanToolbox/Builds/Release/x64/: Controls.txt  VulkanToolbox.vcxproj.FileListAbsolute.txt
VulkanToolbox/Builds/Release/x64/Intermediates/: VulkanToolbox.exe.recipe
VulkanToolbox/Builds/Release/x64/Intermediates/VulkanToolbox.tlog/: CL.10652.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanToolbox.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanToolbox/Builds/Release/x64/VulkanToolbox.tlog/: CL.11924.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanToolbox.lastbuildstate  VulkanToolbox.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VulkanToolbox/Builds/Release/x64/shaders/: AddBufferValues.spv  StateUpdate.spv  vert.spv
VulkanToolbox/Headers/: CommandManager.hpp  VulkanToolbox.hpp
VulkanToolbox/Source/: CommandManager.cpp  DescriptorManager.cpp  MemoryManager.cpp  ObjectManager.cpp  RenderpassManager.cpp
VulkanToolbox/Src/: CMakeLists.txt  DescriptorManager.cpp  ObjectManager.cpp  PipelineManagers.cpp  RenderpassManager.cpp  VulkanWindow.cpp
VulkanToolbox/Src/Headers/: RenderpassManager.hpp  VulkanToolbox.hpp  VulkanWindow.hpp
VulkanToolbox/include/: VulkanToolbox.hpp  vk_mem_alloc.h
VulkanToolbox/include/Internal/: CommandManager.cpp  MemoryManager.cpp  MemoryManager.hpp  ObjectManager.hpp  RenderpassManager.cpp  RenderpassManager.hpp  VulkanCommandManager.hpp  VulkanDescriptorManager.hpp  VulkanMemoryManager.hpp  VulkanObjectManager.hpp  VulkanPipelineManagers.hpp  VulkanRenderpassManager.hpp  VulkanWindow.hpp
VulkanToolbox/shaders/: vert.spv
