add_subdirectory(glfw)
add_subdirectory(spdlog)
add_subdirectory(vk-bootstrap)
add_subdirectory(VulkanMemoryAllocator)
add_subdirectory(glm)
include_directories(glfw/include)
set_target_properties(spdlog PROPERTIES FOLDER External) 
set_target_properties(glfw PROPERTIES FOLDER External) 
set_target_properties(VulkanMemoryAllocator PROPERTIES FOLDER External) 
set_target_properties(vk-bootstrap PROPERTIES FOLDER External) 
set_target_properties(glm PROPERTIES FOLDER External) 

