file(GLOB src "Source/*.cpp")
file(GLOB head "Headers/*.hpp")
add_library(Tools STATIC ${src} ${head})
if(MSVC)
    target_compile_options(Tools PRIVATE /MP)
endif()
if(NOT TARGET spdlog)
    find_package(spdlog REQUIRED)
endif()
find_package(Vulkan REQUIRED)
target_include_directories(Tools PUBLIC ${Vulkan_INCLUDE_DIR})
target_link_libraries(Tools PRIVATE spdlog::spdlog glfw VulkanMemoryAllocator)
target_include_directories(Tools INTERFACE "Headers/")